--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.15.0",
-    "lucide-react": "^0.511.0",
+    "mapbox-gl": "^3.13.0",
     "next": "15.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
